--- a/fe_src/app-entry/less/app-entry.less
+++ b/fe_src/app-entry/less/app-entry.less
@@ -1,33 +1,54 @@
 
-@font-face {font-family: 'iconfont';
-  src: url('../resource/iconfont.eot'); /* IE9*/
-  src: url('../resource/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../resource/iconfont.woff') format('woff'), /* chrome、firefox */
-  url('../resource/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('../resource/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
-}
-
-.iconfont{
-  font-family:"iconfont" !important;
-  font-size:16px;font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-
 .navbar {
-  height: 8%;
+  // height: 8%;
 }
 
 .page-content .summary {
-  height: 60%;
+  height: 70%;
   background: deepskyblue;
 }
 
 
-.record {
-  font-size: 30px;
-  width: 30px;
-  height: 30px;
+.item-inner .item-title-row.record-container {
+  justify-content: space-around;
+}
+
+.record-left {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  text-align: center;
+}
+
+.record-icon {
+  font-size: 25px;
+}
+
+.record-time {
+  font-size: 12px;
+}
+
+.record-content {
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.record-title {
+  font-size: 12px;
+}
+
+.record-value {
+  margin-top: 12px;
+  font-size: 14px;
+}
+
+.infinite-scroll-preloader {
+  margin-top:-20px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.infinite-scroll-preloader .preloader {
+  width:20px;
+  height:20px;
 }
